[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of a Least Recently Used caching algorithm in a container which may be limited by size or time, ordered by most recently seen."
documentation = "https://docs.rs/lru_time_cache"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "lru_time_cache"
readme = "README.md"
repository = "https://github.com/maidsafe/lru_time_cache"
version = "0.10.0"
edition = "2018"

[dependencies]
fake_clock = { version = "~0.3.0", optional = true }

[dev-dependencies]
rand = "~0.6.5"
